Icon issue fixed > added classes to dynamically change z-index

--- a/src/components/header/sound/sound.module.css
+++ b/src/components/header/sound/sound.module.css
@@ -28,3 +28,11 @@
     opacity: 0;
     transform: scale(0);
 }
+
+.top {
+    z-index: 1;
+}
+
+.bottom {
+    z-index: 0;
+}
