--- a/src/components/header/theme/theme.module.css
+++ b/src/components/header/theme/theme.module.css
@@ -23,7 +23,29 @@
     transform-origin: left center;
 }
 
+.span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
+.top {
+    z-index: 1;
+}
+
+.bottom {
+    z-index: 0;
+}
+
+/* span {
+    z-index: 0;
+}
+
+span:nth-child(2) {
+    z-index: 1;
+} */
 
 .fade {
     opacity: 0;
