--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -63,5 +63,5 @@ button {
 
 .app {
     height: 40vh;
-    border: 2px solid sandybrown;
+    /* border: 2px solid sandybrown; */
 }
